Move common classes to isolated library Add gitignore file

--- a/FirstBlazorApp/_Imports.razor
+++ b/FirstBlazorApp/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using FirstBlazorApp
 @using FirstBlazorApp.Shared
-@using FirstBlazorApp.Shared.CustomShared
+@using RamilRazorLibrary
