--- a/FirstBlazorApp/Pages/_Layout.cshtml
+++ b/FirstBlazorApp/Pages/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="css/site.css" rel="stylesheet"/>
     <link href="FirstBlazorApp.styles.css" rel="stylesheet"/>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
@@ -30,5 +31,7 @@
 <script src="_framework/blazor.server.js"></script>
 @* Для импорта JS файлов, нужно добавить их расположение сюда *@
 <script src="~/js/authorsPageMethods.js"></script>
+<script src="_content/MatBlazor/dist/matBlazor.js"></script>
+
 </body>
 </html>
