Add user model and simple Authorization logic

--- a/FirstBlazorApp/Pages/Index.razor
+++ b/FirstBlazorApp/Pages/Index.razor
@@ -6,4 +6,13 @@
 
 Welcome to your new app.
 
+<AuthorizeView>
+    <Authorized>
+        <p>Whelcome, @context.User.Identity.Name</p>
+    </Authorized>
+    <NotAuthorized>
+        <p>You are signed out</p>
+    </NotAuthorized>
+</AuthorizeView>
+
 <SurveyPrompt Title="How is Blazor working for you?" />
